--- a/app/src/main/res/layout/adapter_entrega_realizada.xml
+++ b/app/src/main/res/layout/adapter_entrega_realizada.xml
@@ -30,7 +30,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/motoristaTextView"
+            android:id="@+id/nomeTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
@@ -72,7 +72,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/statusTextView"
+            android:id="@+id/statusFuncionariosTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
