--- a/app/src/main/res/layout/fragment_adm_estoque.xml
+++ b/app/src/main/res/layout/fragment_adm_estoque.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.roteirista.ui.estoque.RoteiristaNotaCadastradasFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/notasRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="LISTA DE NOTAS EM ESTOQUE" />
-</FrameLayout>
+        android:layout_height="match_parent" />
+</LinearLayout>
