--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,6 +21,7 @@
         app:srcCompat="@drawable/perfil_sem_foto" />
 
     <TextView
+        android:id="@+id/userTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
