--- a/app/src/main/res/layout/adapter_funcionario_cadastrado.xml
+++ b/app/src/main/res/layout/adapter_funcionario_cadastrado.xml
@@ -1,78 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_margin="6dp"
+    android:background="@android:color/white"
+    android:orientation="horizontal"
     android:padding="15dp">
 
-    <TextView
-        android:id="@+id/nomeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="@string/nome"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/rgTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="@string/rg"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/cpfTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="@string/cpf"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/enderecoTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="@string/endereco"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/celularTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="@string/celular"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/emailTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="@string/email"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/onlineImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/funcionario_on" />
+
+            <TextView
+                android:id="@+id/nomeTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="@string/nome"
+                android:textColor="#00BCD4"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/cargoTextView"
+            android:id="@+id/cpfTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginBottom="5dp"
             android:text="@string/cargo"
             android:textColor="@color/colorBlack"
-            android:textSize="18sp" />
-
+            android:textSize="14sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/idTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="id"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="18sp" />
 
 </LinearLayout>
