--- a/app/src/main/res/layout/fragment_adm_coletas.xml
+++ b/app/src/main/res/layout/fragment_adm_coletas.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/coletasRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="LISTA DE COLETAS" />
-</RelativeLayout>
+        android:layout_height="match_parent" />
+
+</LinearLayout>
