--- a/app/src/main/res/layout/fragment_roteirista_nota_nova.xml
+++ b/app/src/main/res/layout/fragment_roteirista_nota_nova.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textViewDataEmissao"
+                android:id="@+id/notaTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -30,7 +30,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView46" />
 
             <TextView
-                android:id="@+id/textViewNaturezaOperacao"
+                android:id="@+id/nomeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -40,7 +40,7 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dataEmissaoEditText" />
+                app:layout_constraintTop_toBottomOf="@+id/notaSpinner" />
 
             <TextView
                 android:id="@+id/textViewReferencia"
@@ -56,7 +56,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/enderecoRemetenteEditText" />
 
             <TextView
-                android:id="@+id/textViewEndereco"
+                android:id="@+id/enderecoTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -84,7 +84,7 @@
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/naturezaOperacaoEditText" />
+                app:layout_constraintTop_toBottomOf="@id/motoristaSpinner" />
 
             <TextView
                 android:id="@+id/textViewnomeRemetente"
@@ -118,7 +118,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/naturezaOperacaoEditText"
+                android:id="@+id/motoristaSpinner"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="16dp"
@@ -131,10 +131,10 @@
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewNaturezaOperacao" />
+                app:layout_constraintTop_toBottomOf="@+id/nomeTextView" />
 
             <EditText
-                android:id="@+id/dataEmissaoEditText"
+                android:id="@+id/notaSpinner"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="16dp"
@@ -147,7 +147,7 @@
                 android:inputType="date"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewDataEmissao" />
+                app:layout_constraintTop_toBottomOf="@+id/notaTextView" />
 
             <EditText
                 android:id="@+id/nomeRemetenteEditText"
@@ -195,7 +195,7 @@
                 android:inputType="numberDecimal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewEndereco" />
+                app:layout_constraintTop_toBottomOf="@+id/enderecoTextView" />
 
             <TextView
                 android:id="@+id/textViewBairro"
@@ -626,7 +626,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewCod" />
 
             <TextView
-                android:id="@+id/textViewPlaca"
+                android:id="@+id/placaTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -651,7 +651,7 @@
                 android:ems="10"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewPlaca" />
+                app:layout_constraintTop_toBottomOf="@+id/placaTextView" />
 
 
             <TextView
@@ -1125,7 +1125,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="24dp"
-                android:background="@drawable/background_botao"
+                android:background="@drawable/background_button"
                 android:text="@string/limpar"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -1140,7 +1140,7 @@
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="24dp"
-                android:background="@drawable/background_botao"
+                android:background="@drawable/background_button"
                 android:text="@string/salvar"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
