--- a/app/src/main/res/layout/adapter_coleta_realizada.xml
+++ b/app/src/main/res/layout/adapter_coleta_realizada.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="@string/emissao"
         android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
@@ -28,16 +27,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="Remetente"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/produtoTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="@string/produto"
         android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
@@ -46,34 +35,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="Destinatário"
         android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/nomeTextView"
+        android:id="@+id/motoristaTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="@string/motorista"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/dataColetadaTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="DataColetada"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/horaColetadaTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:text="HoraColetada"
         android:textColor="@color/colorBlack"
         android:textSize="18sp" />
 
