--- a/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
+++ b/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
         app:cardElevation="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -23,11 +24,8 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/notaTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="32dp"
                     android:text="@string/nota"
                     android:textColor="@color/colorBlack"
@@ -35,20 +33,12 @@
 
                 <Spinner
                     android:id="@+id/notaSpinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginRight="24dp" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp" />
 
                 <TextView
-                    android:id="@+id/nomeTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="24dp"
                     android:text="@string/motorista"
                     android:textColor="@android:color/black"
@@ -56,22 +46,15 @@
 
                 <Spinner
                     android:id="@+id/motoristaSpinner"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginRight="24dp"
                     android:ems="10"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="24dp"
                     android:text="@string/data_entrega"
                     android:textColor="@android:color/black"
@@ -81,22 +64,16 @@
                     android:id="@+id/dataEditText"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="24dp"
                     android:layout_marginRight="24dp"
                     android:background="@drawable/background_caixa_texto"
                     android:ems="10"
-                    android:inputType="date"
-                    android:maxLength="8" />
+                    android:inputType="date" />
 
                 <TextView
-                    android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="24dp"
                     android:text="@string/hora_entrega"
                     android:textColor="@android:color/black"
@@ -106,26 +83,22 @@
                     android:id="@+id/horaEditText"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/background_caixa_texto"
                     android:ems="10"
-                    android:inputType="time"
-                    android:maxLength="10" />
-
+                    android:inputType="time" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="24dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/limparButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="145dp"
                     android:layout_height="35dp"
                     android:layout_marginRight="24dp"
                     android:background="@drawable/background_button"
@@ -135,17 +108,13 @@
 
                 <Button
                     android:id="@+id/salvarButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="145dp"
                     android:layout_height="35dp"
                     android:background="@drawable/background_button"
                     android:text="@string/salvar"
                     android:textColor="@android:color/white"
                     android:textStyle="bold" />
-
             </LinearLayout>
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
-
-
-</ScrollView>
+</LinearLayout>
