--- a/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
+++ b/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.roteirista.ui.estoque.RoteiristaNotaCadastradasFragment">
+    android:orientation="vertical"
+    tools:context=".view.roteirista.ui.estoque.RoteiristaNotasCadastradasFragment">
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="@drawable/background_search"
+        android:queryHint="Pesquise pelo número da nota" />
+
+    <TextView
+        android:id="@+id/statusNotasTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/produtosRecyclerView"
+        android:id="@+id/notasRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</FrameLayout>
+</LinearLayout>
