--- a/app/src/main/res/navigation/mobile_navigation_adm.xml
+++ b/app/src/main/res/navigation/mobile_navigation_adm.xml
@@ -9,7 +9,8 @@
         android:id="@+id/nav_estoque"
         android:name="com.gutotech.tcclogistica.view.adm.ui.estoque.AdmEstoqueFragment"
         android:label="@string/estoque"
-        tools:layout="@layout/fragment_adm_estoque" />
+        tools:layout="@layout/fragment_adm_estoque" >
+    </fragment>
 
     <fragment
         android:id="@+id/nav_entregas"
@@ -20,7 +21,7 @@
     <fragment
         android:id="@+id/nav_coletas"
         android:name="com.gutotech.tcclogistica.view.adm.ui.coleta.AdmColetasFragment"
-        android:label="@string/estoque"
+        android:label="@string/coletas"
         tools:layout="@layout/fragment_adm_coletas" />
 
     <fragment
