--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#03A9F4</color>
 
-    <color name="colorBackground">#ECECE8</color>
+    <color name="colorBackground">#E4E4E0</color>
     <color name="colorGray">#A999A099</color>
     <color name="colorYellow">#05399E</color>
 
