--- a/app/src/main/res/layout/app_bar_roteirista_main.xml
+++ b/app/src/main/res/layout/app_bar_roteirista_main.xml
@@ -30,4 +30,10 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <FrameLayout
+        android:id="@+id/frameConteiner"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"></FrameLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
