--- a/app/src/main/res/navigation/mobile_navigation_adm.xml
+++ b/app/src/main/res/navigation/mobile_navigation_adm.xml
@@ -3,20 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation_adm"
-    app:startDestination="@+id/nav_estoque">
-
-    <fragment
-        android:id="@+id/nav_estoque"
-        android:name="com.gutotech.tcclogistica.view.adm.ui.estoque.AdmEstoqueFragment"
-        android:label="@string/estoque"
-        tools:layout="@layout/fragment_adm_estoque" >
-    </fragment>
+    app:startDestination="@+id/nav_entregas">
 
     <fragment
         android:id="@+id/nav_entregas"
         android:name="com.gutotech.tcclogistica.view.adm.ui.entregas.AdmEntregasFragment"
         android:label="@string/entregas"
         tools:layout="@layout/fragment_adm_entregas" />
+
+    <fragment
+        android:id="@+id/nav_estoque"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.estoque.AdmEstoqueFragment"
+        android:label="@string/notas"
+        tools:layout="@layout/fragment_adm_estoque" />
 
     <fragment
         android:id="@+id/nav_coletas"
