--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,13 +13,6 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
-    <style name="Splash" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@drawable/background_splash</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -33,9 +26,21 @@
         <item name="android:textColor">@android:color/holo_red_light</item>
     </style>
 
+    <style name="Splash" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="ButtonTheme">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@drawable/background_button</item>
+    </style>
+
+    <style name="EditTextTheme">
+        <item name="android:padding">3dp</item>
+        <item name="android:background">@drawable/background_edit_text</item>
     </style>
 
 </resources>
